@@ -1,18 +1,19 @@
 
 
-plugin.tx_ratings_pi1 = USER_INT
-plugin.tx_ratings_pi1 {
+plugin.tx_ratings = USER_INT
+plugin.tx_ratings {
     userFunc = Netcreators\Ratings\Controller\RegisterPluginController->main
-    storagePid = {$plugin.tx_ratings_pi1.storagePid}
-    templateFile = {$plugin.tx_ratings_pi1.templateFile}
-    minValue = {$plugin.tx_ratings_pi1.minValue}
-    maxValue = {$plugin.tx_ratings_pi1.maxValue}
-    ratingImageWidth = {$plugin.tx_ratings_pi1.ratingImageWidth}
-    mode = {$plugin.tx_ratings_pi1.mode}
-    disableIpCheck = {$plugin.tx_ratings_pi1.disableIpCheck}
+    storagePid = {$plugin.tx_ratings.storagePid}
+    templateFile = {$plugin.tx_ratings.templateFile}
+    minValue = {$plugin.tx_ratings.minValue}
+    maxValue = {$plugin.tx_ratings.maxValue}
+    ratingImageWidth = {$plugin.tx_ratings.ratingImageWidth}
+    mode = {$plugin.tx_ratings.mode}
+    disableIpCheck = {$plugin.tx_ratings.disableIpCheck}
 }
 
-[globalVar = LIT:1 = {$plugin.tx_ratings_pi1.showAdditionalCSS}]
-{$plugin.tx_ratings_pi1.pageObjectName}.includeCSS.ratingsAddtionalCSS = {$plugin.tx_ratings_pi1.additionalCSS}
+
+[globalVar = LIT:1 = {$plugin.tx_ratings.showAdditionalCSS}]
+{$plugin.tx_ratings.pageObjectName}.includeCSS.ratingsAddtionalCSS = {$plugin.tx_ratings.additionalCSS}
 [end]
 
