@@ -1,5 +1,6 @@
 2018-11-24 Franz Holzinger <franz@ttproducts.de>
 
+    * Replace tx_ratings_pi1 by tx_ratings because in TYPO3 only one plugin is supported.
     * add composer.json
     * core change: plugin icon wizard
     * changes: constants.txt and setup.txt
